--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 *{
-    background-color: aqua;
+    background-color: black;
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.Rubrik{
+    color: white;
+    text-align: center;
+    font-size: 35px;
 }
