--- a/style.css
+++ b/style.css
@@ -4,12 +4,8 @@
     margin: 0;
 }
 
-.Rubrik{
-    color: white;
-    text-align: center;
-    font-size: 35px;
-}
 
-.Text1{
-    width: 100px;
+.logo{
+    width: 200px;
+    height: auto;
 }
