--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 *{
-    background-color: rgb(0, 0, 0);
     box-sizing: border-box;
     margin: 0;
+}
+
+body{
+        background-color: rgb(0, 0, 0);
 }
 
 
@@ -12,7 +15,8 @@
 
 .infoRuta{
     border: 2px solid rgb(255, 255, 255);
-    height: 500px;
+    height: 400px;
+    width: 500px;
     margin-right: 50px;
     margin-top: 50px;
 }
@@ -25,4 +29,30 @@
 .logo{
     width: 200px;
     height: auto;
+}
+
+.infoRuta{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.infoBild{
+    height: 220px;
+    margin: 15px;
+    align-items: center;
+}
+
+.datum, .skapare, .publicerad{
+    color: white;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.förstaWebbplatsen{
+    color: white;
+}
+
+a{
+    color: rgb(0, 153, 255);
 }
