--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     margin-top: 50px;
 }
 
-.text1{
+.text1, .webbensHistoria{
     color: white;
     font-size: 20px;
     margin: 50px;
@@ -49,7 +49,7 @@ body{
     margin: 10px;
 }
 
-.förstaWebbplatsen{
+.webbensHistoria{
     color: white;
 }
 
