--- a/programering/prg.css
+++ b/programering/prg.css
@@ -10,4 +10,11 @@ body{
 .ProgrammeringsHistoria{
     color: white;
     font-size: 20px;
+    margin: 20px;
+}
+
+.AIHistoria{
+    color: white;
+    font-size: 20px;
+    margin: 20px;
 }
