--- a/style.css
+++ b/style.css
@@ -106,3 +106,16 @@ a{
 #copyrightInfo{
     margin-top: 10px;
 }
+
+.ProgrammeringsHistoria{
+    color: white;
+    font-size: 20px;
+}
+
+.Ada{
+     border: 2px solid rgb(255, 255, 255);
+    height: 400px;
+    width: 500px;
+    margin-right: 50px;
+    margin-top: 50px;
+}
